fix(how-to-steps.css): make spacing not so weird
bottom and top margins are extreme for How To Steps

--- a/express/blocks/how-to-steps/how-to-steps.css
+++ b/express/blocks/how-to-steps/how-to-steps.css
@@ -42,13 +42,13 @@ main .how-to-steps .tip {
 
 main .how-to-steps .tip-text p {
   font-size: var(--body-font-size-l);
-  margin-top: 16px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
 main .how-to-steps .tip-text h3 {
   margin-top: 0px;
-  margin-bottom: 16px;
+  margin-bottom: 0;
   font-size: var(--heading-font-size-s);
   text-align: left;
 }
